# gec-annotation-platform

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  todo
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt  test-input.json
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20240903_01_initial.py  20240903_02_seed_error_types.py  20240903_03_widen_hotkey_length.py  20240903_04_seed_error_type_hotkeys.py  20250221_01_category_visibility_and_created_at.py  20250221_02_drop_unused_audit_logs.py  20250307_01_dedupe_annotations.py  20250310_01_error_type_sort_order.py
backend/app/: __init__.py  cli.py  config.py  database.py  main.py
backend/app/models/: __init__.py  base.py  entities.py
backend/app/routers/: __init__.py  auth.py  categories.py  dashboard.py  error_types.py  texts.py
backend/app/schemas/: common.py  dashboard.py
backend/app/services/: auth.py
backend/gec_annotation_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_annotations.py  test_auth.py  test_auth_get_db.py  test_auth_service.py  test_categories.py  test_cli.py  test_config.py  test_dashboard.py  test_database.py  test_error_types.py  test_export.py  test_text_assignments.py
docs/: annotation-redesign.md  deployment.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  main.tsx  setupTests.ts  testTeardown.ts  types.ts
frontend/src/api/: client.ts
frontend/src/components/: AnnotationSidebar.tsx  AnnotationToolbar.tsx  AnnotationWorkspace.tsx  AppHeader.test.tsx  AppHeader.tsx  AppLayout.tsx  AppLogo.tsx  ErrorTypePalette.tsx  LanguageSwitcher.tsx  TokenEditor.test.tsx  TokenEditor.tsx  (+10 more)
scripts/: deploy.py
(+47 files in other folders)
