[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gec_annotation_backend"
version = "0.1.0"
description = "Annotation platform backend for Tatar GEC"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Codex", email = "codex@example.com"}]
dependencies = [
    "fastapi>=0.128.5",
    "uvicorn[standard]>=0.40.0",
    "SQLAlchemy>=2.0.46",
    "alembic>=1.18.3",
    "psycopg[binary,pool]>=3.3.2",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.12.0",
    "typer[all]>=0.21.1",
    "python-multipart>=0.0.22"
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*", "tests*"]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.7",
    "mypy>=1.19.0"
]

[tool.ruff]
line-length = 100
